--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 			<version>42.6.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
