--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/TechItEasy
 spring.datasource.username=postgres
-spring.datasource.password=Priyanka@7
+spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # jpa
@@ -12,7 +12,7 @@ spring.jpa.show-sql=true
 
 # generate schema ddl to create tables
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 
 # database initialization with data.sql after hibernate
